--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - lib/icons/
-  - lib/images/
+  - lib/images/donuts/
+  - lib/images/burgers/
+  - lib/images/smoothie/
+  - lib/images/pizza/
+  - lib/images/pancakes/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
